# rust-auth-service

./: .env.example  Cargo.toml  Makefile  docker-compose.yml
.sqlx/: query-d2acf51304903a79451ad6cfe4cdd76a33be5044e9775aa4dfad96708fc98217.json
auth/: Cargo.toml  Dockerfile
auth/src/: main.rs
auth/src/controllers/: auth.rs  helpers.rs  mod.rs
auth/src/helpers/: errors.rs  mod.rs  responses.rs  validators.rs
auth/src/repositories/: users.rs
auth/src/routes/: auth.rs
auth/src/services/: auth.rs  hash.rs  jwt.rs  mod.rs
shared/: Cargo.toml
shared/migrations/: 20250730131559_create_users_table.sql
shared/src/database/: mod.rs
shared/src/jwt/: mod.rs
