[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = "0.8.4"
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = "0.20.0"
validator_derive = "0.20.0"
