[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
once_cell = "1.21.3"
regex = "1.11.1"
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "macros"] }


